Evaluating the model & predicting.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -94,6 +94,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "test_loss, test_acc = model.evaluate(test_images, test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.predict(test_images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.argmax(predictions[0]) == test_labels[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
